# DS-Project

./: CMakeLists.txt  main.cpp
entity/Graph/: graph.cpp  graph.h
entity/Graph/BFS/: BFS.cpp  BFS.h
entity/Person/: person.cpp  person.h
entity/Relation/: relation.cpp  relation.h
utils/Stack/: stack.cpp  stack.h
